--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=product
 
 #### GENERAL INFORMATION
-#Swagger URL: http://localhost:8000/api/v1/swagger-ui/
+#Swagger URL: http://localhost:8000/api/v1/swagger-ui/index.html
 #URL: http://localhost:8000/api/v1/products
