Medium Project has completed by me. Ready for publish.

--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=product
 
+#### OTHER SETTINGS
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
 #### GENERAL INFORMATION
-#Swagger URL: http://localhost:8000/api/v1/swagger-ui/index.html
+#Swagger URL: http://localhost:8000/api/v1/swagger-ui/
 #URL: http://localhost:8000/api/v1/products
