--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=product
 
 #### OTHER SETTINGS
-#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 #### GENERAL INFORMATION
 #Swagger URL: http://localhost:8000/api/v1/swagger-ui/
