--- a/product/Dockerfile
+++ b/product/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:11
 EXPOSE 8000
-COPY "/target/product-0.0.1-SNAPSHOT.jar" app.jar
+COPY "product/target/product.jar" app.jar
 CMD [ "java", "-jar", "app.jar" ]
