application.properties file changed

--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=product-microservice
 server.servlet.context-path=/api/v1
 
 #### DATABASE SETTINGS
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=host.docker.internal
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=product
 
